turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:18: error: missing arguments for method couleurActuelle in class Turmite;
follow this method with `_' if you want to treat it as a partially applied function
    		(rule(state)(couleurActuelle)(MVT_SUIVANT)) match{
                             ^Turmite:35: error: missing arguments for method couleurActuelle in class Turmite;
follow this method with `_' if you want to treat it as a partially applied function
		if(rule(state)(couleurActuelle)(ETAT_SUIVANT)==0){
                               ^Turmite:44: error: missing arguments for method couleurActuelle in class Turmite;
follow this method with `_' if you want to treat it as a partially applied function
		setCouleurBrosse(rule(state)(couleurActuelle)(CLR_SUIVANT))
                                             ^